[tool.poetry]
name = "ha-stuttgart-library"
version = "1.0.0"
description = ""
authors = ["makefu <github@syntax-fehler.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
